tests/FreeImage/FreeImage.304/Wrapper/FreeImage.NET/src/FreeImage.cs

		
		[DllImport("FreeImage.dll")]
		public static extern bool FreeImage_AdjustCurve(FIBITMAP dib, byte[] lut, FI_COLOR_CHANNEL channel);
		
		[DllImport("FreeImage.dll")]
		public static extern bool FreeImage_AdjustGamma(FIBITMAP dib, Double gamma);
		
		[DllImport("FreeImage.dll")]
		public static extern bool FreeImage_AdjustBrightness(FIBITMAP dib, Double percentage);
		
		[DllImport("FreeImage.dll")]
		public static extern bool FreeImage_AdjustContrast(FIBITMAP dib, Double percentage);
		
		[DllImport("FreeImage.dll")]
		public static extern bool FreeImage_Invert(FIBITMAP dib);
		
		[DllImport("FreeImage.dll")]
		public static extern bool FreeImage_GetHistogram(FIBITMAP dib, int histo, FI_COLOR_CHANNEL channel);
		


		[DllImport("FreeImage.dll")]
		public static extern bool FreeImage_GetChannel(FIBITMAP dib, FI_COLOR_CHANNEL channel);
		
		[DllImport("FreeImage.dll")]
		public static extern bool FreeImage_SetChannel(FIBITMAP dib, FIBITMAP dib8, FI_COLOR_CHANNEL channel);
		
		
		
		[DllImport("FreeImage.dll")]
		public static extern FIBITMAP FreeImage_Copy(FIBITMAP dib, int left, int top, int right, int bottom);
		
		[DllImport("FreeImage.dll")]
		public static extern bool FreeImage_Paste(FIBITMAP dst, FIBITMAP src, int left, int top, int alpha);
	}
}
